# Sentinel

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mcp.config.json  pyproject.toml
.github/workflows/: ci.yml
data/runbooks/: auth-outage.md  db-connection-errors.md  deploy-rollback.md  latency-spike.md  multi-service-degradation.md  pod-restart-loop.md
docker/: init-db.sql
docs/: build_study_guide.py  concept-index.md
evals/: compare.py  generalization.py  redteam.py  results_baseline.json  results_finetuned.json  results_generalization_baseline.json  results_generalization_finetuned.json  triage_eval.py
finetune/: README.md  colab_train.ipynb  export_ollama.py  generate_dataset.py  install_gguf.py  train_qlora.py
scripts/: check.py  check_credentials.py  monitor_repos.py  smoke_phase1.py
sentinel/: __init__.py  cli.py  config.py  db.py  logging_setup.py  mcp_client.py  observability.py  runner.py  triage.py
sentinel/agents/: __init__.py  prompts.py
sentinel/api/: __init__.py  app.py
sentinel/graph/: __init__.py  builder.py  nodes.py  schemas.py  state.py  validation.py
sentinel/integrations/: __init__.py  ci_investigator.py  github.py  github_tools.py
sentinel/mcp_server/: __init__.py  server.py
sentinel/memory/: __init__.py  cache.py  incidents.py
sentinel/models/: __init__.py  openrouter.py  router.py  structured.py
sentinel/rag/: __init__.py  retriever.py  store.py
sentinel/tools/: __init__.py  guardrails.py  observability.py  remediation.py
simulator/: __init__.py  generators.py  models.py  scenarios.py  world.py
tests/: test_graph.py  test_guardrails.py  test_simulator.py
ui/: app.py  common.py
ui/pages/: 1_Incident_Response.py  2_Evaluations.py  3_Observability.py  4_Knowledge.py  5_System.py  6_Repositories.py
