[project]
name = "sentinel"
version = "0.1.0"
description = "Autonomous incident response agent — LangGraph, LangChain, MCP, RAG, and a fine-tuned triage model"
requires-python = ">=3.11,<3.12"

dependencies = [
    # --- orchestration ---
    "langgraph>=0.2.60",
    "langgraph-checkpoint-postgres>=2.0.9",
    "langchain>=0.3.14",
    "langchain-core>=0.3.29",
    "langchain-community>=0.3.14",
    # NOTE: deliberately NOT langchain-openai. It pulls in openai -> jiter,
    # whose compiled extension is blocked by Windows Smart App Control on the
    # dev machine. sentinel/models/openrouter.py speaks the protocol over httpx.
    "langchain-ollama>=0.2.2",
    "langchain-postgres>=0.0.12",     # pgvector store

    # --- mcp ---
    "mcp>=1.2.0",
    "langchain-mcp-adapters>=0.0.3",

    # --- retrieval ---
    "rank-bm25>=0.2.2",

    # --- api + ui ---
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.2.1",
    "streamlit>=1.41.1",

    # --- infra ---
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    "psycopg[binary,pool]>=3.2.3",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.1",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "rich>=13.9.4",
    "typer>=0.15.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "ruff>=0.9.1",
]

[project.scripts]
sentinel = "sentinel.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentinel", "simulator"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
