[project]
name = "sentinel"
version = "0.1.0"
description = "Autonomous incident response agent — LangGraph, LangChain, MCP, RAG, and a fine-tuned triage model"
requires-python = ">=3.11,<3.12"

dependencies = [
    # --- orchestration ---
    "langgraph>=0.2.60",
    "langgraph-checkpoint-postgres>=2.0.9",
    "langchain>=0.3.14",
    "langchain-core>=0.3.29",
    "langchain-community>=0.3.14",
    # NOTE: deliberately NOT langchain-openai. It pulls in openai -> jiter,
    # whose compiled extension is blocked by Windows Smart App Control on the
    # dev machine. sentinel/models/openrouter.py speaks the protocol over httpx.
    "langchain-ollama>=0.2.2",
    "langchain-postgres>=0.0.12",     # pgvector store

    # --- mcp ---
    "mcp>=1.2.0",
    "langchain-mcp-adapters>=0.0.3",

    # --- retrieval ---
    "rank-bm25>=0.2.2",

    # --- api + ui ---
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.2.1",
    "streamlit>=1.41.1",

    # --- infra ---
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    "psycopg[binary,pool]>=3.2.3",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.1",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "rich>=13.9.4",
    "typer>=0.15.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "ruff>=0.9.1",
]
# Only needed to run finetune/. Kept out of the default install because torch
# is a multi-GB download that nothing else in the project requires.
train = [
    "torch>=2.5.0",
    "transformers>=4.48.0",
    "datasets>=3.2.0",
    "peft>=0.14.0",
    "trl>=0.13.0",
    "accelerate>=1.2.0",
    "bitsandbytes>=0.45.0",
    "sentencepiece>=0.2.0",
    "protobuf>=5.29.0",
]

[project.scripts]
sentinel = "sentinel.cli:app"

# NOTE ON TORCH: the `train` extra installs the default PyPI torch wheel, which
# is CPU-only on Windows. That is deliberate rather than an oversight.
#
# Pinning the CUDA index here was tried and reverted. The CUDA wheel installs
# fine but will not import on the development machine — Windows Smart App
# Control blocks torch/lib/shm.dll and its unsigned dependencies, so `import
# torch` fails outright and takes the rest of the project down with it. A
# default that breaks `uv sync` is worse than a default that is merely slow.
#
# To train locally where Smart App Control permits it:
#   uv pip install --reinstall torch --index-url https://download.pytorch.org/whl/cu126
# Otherwise use finetune/colab_train.ipynb, which is the supported path.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentinel", "simulator"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Notebooks share state across cells, so ruff reports every name defined in an
# earlier cell as undefined. The rule is right about modules and wrong here.
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
